# ai-bootcamp-exercises

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
deck-of-cards/: pyproject.toml  test_main.py
vector-2d/: main.py  test_main.py
week-01/deck-of-cards/: main.py
week-01/vector-2d/: pyproject.toml  test_main.py
week-02/file-proccessing-generator/: main.py  pyproject.toml  test.md
week-02/logging-decorator/: main.py  pyproject.toml  test_main.py
week-02/retry-decorator/: main.py  pyproject.toml  test_main.py
week-02/timing-decorator/: main.py  pyproject.toml  test_main.py
week-03/ch1/: test_one.py
week-05/: ex1_basic_async.py
week-05/numpy-array-operations/: main.py  pyproject.toml
